objects/CMPL123__Configuration_Audit_Trail_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Action__c</fullName>
        <label>Action</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Audit_Type__c</fullName>
        <label>Audit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Error_Status__c</fullName>
        <label>Error Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Retry</fullName>
                </value>
                <value>
                    <fullName>Retry Failed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__New_Value__c</fullName>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Number_of_Error_Retries__c</fullName>
        <label>Number of Error Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_API__c</fullName>
        <label>Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Old_Value__c</fullName>
        <label>Old Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record_Id__c</fullName>
        <label>Parent Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record_Name__c</fullName>
        <label>Parent Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Performed_By_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performed By Id</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Configuration Audit Trail Error Logs</relationshipLabel>
        <relationshipName>Configuration_Audit_Trail_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Performed_On__c</fullName>
        <label>Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Version__c</fullName>
        <label>Version</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Configuration Audit Trail Error Log</label>
    <nameField>
        <label>Config Audit Trail Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Audit Trail Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>